--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Enter+Sansman:wght@400&family=Poppins:wght@400;500;600;700&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +12,42 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.top-45 {
+  top: 45%;
+}
+
+.text-shadow {
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
+
+.element {
+  /* background-color: rgba(255, 255, 255, 1); */
+  color: #000;
+  /* border-radius: 10px; */
+  box-shadow: 
+      18px 0px 6px 0px rgba(0, 0, 0, 0.20) inset,
+      0 10px 30px rgba(0, 0, 0, 0.6);
+}
+
+.remove-arrow::-webkit-inner-spin-button,
+.remove-arrow::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+/* .remove-arrow {
+    -moz-appearance: textfield;
+} */
+
+@font-face {
+  font-family: 'Enter Sansman';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Enter Sansman Bold'), url('./fonts/entsans.woff') format('woff');
+  }
